fix: update toast style dark mode

--- a/src/pages/UniversalSwap/SwapV3/index.module.scss
+++ b/src/pages/UniversalSwap/SwapV3/index.module.scss
@@ -449,7 +449,7 @@
   background-size: cover;
 
   @include theme() {
-    // background-color: theme-get('primary-1');
+    background-color: theme-get('primary-1');
     color: #232521;
   }
 
@@ -462,11 +462,11 @@
   }
 
   border-radius: 99px;
-  padding: 16px;
+  padding: 8px 16px;
   font-style: normal;
-  font-weight: 600;
+  font-weight: 500;
   font-size: 16px;
-  line-height: 100%;
+  line-height: 150%;
   text-align: center;
   display: flex;
   justify-content: center;
